--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,7 +4,7 @@ body
    margin: 40px;
    font-size: 24px;
    font-family: helvetica;
-   background-image: url(https://images3.alphacoders.com/802/thumb-1920-80207.jpg);
+   background-image: url(https://userscontent2.emaze.com/images/a9f79704-a730-41a9-88d5-6f62c52718b0/32d6f4847750fc61d1c934be0073a8ae.png);
    background-repeat: no-repeat;
    background-size: auto;
    color: white;
